# pid_reader

./: .gitignore  .gitmodules  .mypy.ini  .pre-commit-config.yaml  README.md  setup.cfg
data_generator/: list_of_symbols_ccf.txt  readme.md
data_generator/metadata/: center_text_config.csv  symbols_blocked.csv
docs/: Backbone.md  Procedure.md  TrainingProcedure.md
generator/: .pre-commit-config.yaml  README.md  setup.cfg  setup.py
generator/data/metadata/: center_text_config.csv  symbols.pickle  symbols_blocked.csv
generator/src/: cad_converter.py  ccf_reader.py  config.py  generate_set_diagrams.py  generate_tensorflow.py  inspector.ipynb  metadata.py  ml_storage.py  set_up_symbol_library.py  symbol.py
generator/tests/: pytest.ini
generator/tests/unit/: test_metadata.py  test_symbol.py
src/generator/: Dockerfile  cad_converter.py  ccf_reader.py  config.py  generate_set_diagrams.py  generate_tensorflow.py  launch_cad_conversion.py  launch_generate_set_diagrams.py  launch_set_up_symbol_library.py  metadata.py  sample_dataset.py  set_up_symbol_library.py  symbol.py  tensorflow_generation.py  training_storage.py
src/trainer/: .gitignore  Dockerfile.detector  analyze_experiment.py  compute.py  config.py  data.py  download_experiment_files.py  inference_backbone.py  inference_detector.py  launch_experiment_backbone.py  launch_experiment_detector.py  ml_storage.py  model.py  train_backbone.py  train_detector.py
trainer/: .gitignore  requirements.txt  setup.cfg
trainer/docs/: Detector.md  Gpu.md  PDF.md  Papers.md
trainer/src/: Dockerfile.detector  analyze_experiment.py  compute.py  config.py  data.py  download_experiment_files.py  experiment.py  (+16 more)
(+8 files in other folders)
